fixed scroll bar thing, just made it visible on one page when needed on all pages

--- a/myapp/static/myapp/css/about.css
+++ b/myapp/static/myapp/css/about.css
@@ -41,6 +41,8 @@ svg {
   margin: auto;
   margin-top: 20px;
   margin-bottom: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
   max-width: 500px;
   text-align: justify;
   text-justify: inter-word;
