--- a/myapp/static/myapp/css/all.css
+++ b/myapp/static/myapp/css/all.css
@@ -4,6 +4,8 @@
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
   color: #B9A673;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 /* the "slideshow" stuff is used in home and in portrait, so it's in all.css */
@@ -47,7 +49,6 @@ body {
   background-color: #000000;
   color: #cdb9b0;
   font-family: "Times New Roman", Times, serif;
-  width: 100vw;
 }
 
 h1 {
@@ -269,5 +270,14 @@ footer {
   }
   */
 }
+
+
+/* if any page needs scrollbar, all have scrollbar */
+@media screen and (max-height: 1060px) {
+  html {
+    overflow-y: scroll;
+  }
+}
+
 
 
